# Cpp_project_rpg

./: README.md  RPG.sln
RPG/: Button.cpp  Button.h  CMakeLists.txt  CMakeLists.txt.txt  Engine.cpp  Engine.h  Entity.cpp  Entity.h  GameInstance.cpp  GameInstance.h  Instance.cpp  Instance.h  Player.cpp  Player.h  PlayerAnimation.cpp  PlayerAnimation.h  PlayerHitbox.h  PlayerMovement.cpp  PlayerMovement.h  PrimaryMenuInstance.cpp  PrimaryMenuInstance.h  RPG.cpp  RPG.vcxproj  RPG.vcxproj.filters  RPG_Game.vcxproj  RPG_Game.vcxproj.filters  Scenario.cpp  Scenario.h  main.cpp
RPG/Config/: window.ini
RPG/Debug/: vc141.idb
RPG/Debug/RPG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RPG.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RPG/Headers/: Engine.h  Entity.h  GameInstance.h  Instance.h  Player.h  PlayerAnimation.h  PlayerHitbox.h  PlayerMovement.h  PrimaryMenuInstance.h  Scenario.h
RPG/Release/RPG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RPG.lastbuildstate  RPG.write.1u.tlog  link.command.1.tlog  (+2 more)
RPG/Resources/: Button.cpp  Button.h  Engine.cpp  Engine.h  Entity.cpp  GameInstance.cpp  GameInstance.h  Instance.cpp  Instance.h  PlayerAnimation.h  PlayerHitbox.cpp  PlayerMovement.cpp  PlayerMovement.h  PrimaryMenuInstance.cpp  PrimaryMenuInstance.h  RPG_Game.vcxproj.filters  Scenario.cpp  Scenario.h  main.cpp
RPG/Sources/: Button.cpp  Engine.cpp  Entity.cpp  GameInstance.cpp  Instance.cpp  Player.cpp  PlayerAnimation.cpp  PlayerHitbox.cpp  PlayerMovement.cpp  PrimaryMenuInstance.cpp  Scenario.cpp
(+40 files in other folders)
